src/test/deca/context/valid/ContextAvecObjet/DeclFields/initializedFields.deca
// Description:
//    Déclaration et initialisation de champs
//
// Resultats:
//    ok

class A {
    protected int x = -1;
    float y = x;
    boolean a = true;
}