src/test/deca/context/invalid/ContextAvecObjet/DeclFields/typeInexistant.deca
// Description:
//    Déclaration d'un champs de type indéfini
//
// Resultats:
//    Erreur contextuelle
//    type inexistant

class A {
    protected in x;
}
